2011-05-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/folder.py (PhotoSourceOptionsDirUI): Fixed a chckbutton
	  sensitiveness.

2011-05-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* uk.po: Added Ukrainian translation.  Thanks Sergiy Gavrylov!

2011-04-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* sv.po: Added new translation.  Thanks Daniel Nylander!

2011-04-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.3 release.

2011-04-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/photosource.py, liststore.py: Fixed a cursor
	  position on the photo source treeview.
	* image/tooltip.py: Added some argument to tooltips.

2011-04-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/photosource.py: Added sort by 'source' column.

2011-04-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/tumblr/__init__.py: Added new gconf keys:
	  disable_delete_post and enable_ban_liked.

2011-04-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe.schemas.in: Updated schemas.
	* shotwell.py: Added support for new shotwell tag database scheme.
	* liststore.py: Added sorting photo sources.

2011-04-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/*: Doesn't share private photo.
	* utils/urlgetautoproxy.py: Added urlget_with_autoproxy.
	* help/ja/ja.po: Updated Japanese translation.
	* help/C/gphotoframe.xml, */it.po: Updated help documentation and
	  Italian translation.  Thanks Cristian Marchi!

2011-04-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/tumblr.py: Added support for TumblrAuthenticate,
	  TumblrReblog, TumblrDelete and TumblrTrash.

2011-04-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/it.po: Updated Italian translation.  Thanks Cristian Marchi!

2011-04-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/tumblr.py: Checks user own posts.
	* preferences/__init__.py: Saves the geometry of preferences window.
	* actor/base.py (IconTexture): Fixed actor reactives.
