@@ -1,3 +1,8 @@
+2011-05-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* plugins/folder.py, gphotoframe.ui: Added new option for 'Exclude
+	  hidden files and folders'.
+
 2011-05-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* plugins/folder.py (PhotoSourceOptionsDirUI): Fixed a chckbutton
